# ads_praktikum_4

./: CMakeLists.txt  DijkstraSP.cpp  DijkstraSP.h  EdgeWeightedDigraph.cpp  EdgeWeightedDigraph.h  EdgeWeightedGraph.cpp  EdgeWeightedGraph.h  GraphTest.cpp  Graphsearch.h  KruskalMST.cpp  KruskalMST.h  PrimMST.cpp  PrimMST.h  main.cpp
